<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/portada">

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="#306E0D"
        android:ems="10"
        android:hint="@string/dg_hint_correo"
        android:inputType="textPersonName"
        android:textColor="#FDF9F9"
        android:textColorHint="#FDF9F9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="#306E0D"
        android:ems="10"
        android:hint="@string/dg_hint_password"
        android:inputType="textPersonName"
        android:textColor="#FDF9F9"
        android:textColorHint="#FDF9F9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreo" />

    <Button
        android:id="@+id/boton_registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#306E0D"
        android:text="Registrarse"
        android:textColor="#FDF9F9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPeso" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="#306E0D"
        android:ems="10"
        android:hint="@string/dg_hint_username"
        android:inputType="textPersonName"
        android:textColor="#FDF9F9"
        android:textColorHint="#FDF9F9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContraseña" />

    <EditText
        android:id="@+id/txtAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="#306E0D"
        android:ems="10"
        android:hint="@string/dg_hint_altura"
        android:inputType="textPersonName"
        android:textColor="#FDF9F9"
        android:textColorHint="#FDF9F9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuario" />

    <EditText
        android:id="@+id/txtPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="#306E0D"
        android:ems="10"
        android:hint="@string/dg_hint_peso"
        android:inputType="textPersonName"
        android:textColor="#FDF9F9"
        android:textColorHint="#FDF9F9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAltura" />

</androidx.constraintlayout.widget.ConstraintLayout>