<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"


        android:background="@mipmap/portada"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="132dp"
            android:background="#306E0D"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="#F2F4F0"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="#306E0D"
            android:hint="@string/dg_hint_correo"
            android:textColor="#F5F6F5"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#F5F6F5" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="#306E0D"
            android:hint="@string/dg_hint_password"
            android:inputType="textPassword"
            android:textColor="#F5F6F5"
            android:textColorHint="#F5F6F5" />

        <Button
            android:id="@+id/boton_entrar"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:background="#306E0D"
            android:text="Entrar"
            android:textColor="#F1E7E7" />

        <Button
            android:id="@+id/boton_registrar"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:background="#306E0D"
            android:text="Registrarse"
            android:textColor="#F8F4F4" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>